called exterminator bug squashing complete

--- a/css/index.css
+++ b/css/index.css
@@ -412,7 +412,7 @@ body .people .title .person {
   border-radius: 2rem;
 }
 body .people .title .person img {
-  width: 30%;
+  width: 20%;
   height: auto;
   border-radius: 8rem;
 }
