--- a/less/team.less
+++ b/less/team.less
@@ -50,7 +50,7 @@ body{
             margin: 12px;
             border-radius: 2rem;
             img{
-                width: 30%;
+                width: 20%;
                 height: auto;
                 border-radius: 8rem;
             }
@@ -68,25 +68,27 @@ body{
 //      height: auto;
 //      background: none;
 //      border: 1px solid green;
-      
+
 //     }
 //    } 
 // }
 
 body  .people .title .person {
-        background-color: rgba(2, 233, 125, 0.842);
-}
-    .people h2, h1 {
-            font-size: 2rem;
-            text-shadow: 2px 3px 5px;
-            
-        }
+    background-color: rgba(2, 233, 125, 0.842);
     
-@media(max-width: 600px) {
+    
+}
+.people h2, h1 {
+    font-size: 2rem;
+    text-shadow: 2px 3px 5px;
+    
+}
 
-body .people .title .person {
-background:transparent;
-font-size: 2rem;
+@media(max-width: 600px) {
+    
+    body .people .title .person {
+        background:transparent;
+        font-size: 2rem;
 img{
     width: 150%;
     justify-content: center;
@@ -95,6 +97,6 @@ img{
 }
 @media(max-width: 600px) {
     h2{
-font-size: 2rem;
+        font-size: 2rem;
     }
-    }
+}
